# STUDENT-RSA-Tool

./: .gitignore  Cargo.toml  README.md
src/: decrypt.rs  encrypt.rs  key_generator.rs  key_storage.rs  main.rs  utils.rs
src/widgets/: browse_key_storage_widget.rs  encrypt_decrypt_widget.rs  generate_key_widget.rs  main_menu_widget.rs  mod.rs  utils.rs
